# ev-charging-manager

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml  tests.yml
automations/: ev_charging_manager_influxdb_export.yaml
custom_components/ev_charging_manager/: __init__.py  binary_sensor.py  button.py  charger_profiles.py  charging_window.py  config_flow.py  config_store.py  const.py  debug_logger.py  lifecycle.py  manifest.json  models.py  pricing.py  sensor.py  (+13 more)
docs/: SESSION-MODEL.md  grafana-queries.md
tests/: conftest.py  test_binary_sensor.py  test_charger_profiles.py  test_charging_duration_sensor.py  test_completion_resilience.py  test_config_flow.py  test_config_flow_subentries.py  test_config_store.py  test_cross_validation.py  test_data_gap.py  test_debug_button.py  test_debug_logger.py  test_diagnostics.py  test_events.py  test_export_docs.py  test_guest_charging.py  test_init.py  test_lifecycle.py  test_micro_session.py  test_models.py  test_observation_logging.py  test_options_flow.py  test_pricing.py  test_proactive_warnings.py  test_rfid_discovery.py  test_rfid_discovery_goe.py  test_rfid_lookup.py  test_rfid_mapping_flow.py  test_sensors.py  test_session_engine.py  test_session_engine_bugfixes.py  test_session_engine_charger_outage.py  test_session_engine_disconnect.py  test_session_engine_guest.py  test_session_engine_heartbeat.py  test_session_engine_micro_filter.py  test_session_engine_overnight.py  test_session_engine_plug_anchored.py  test_session_engine_race_regression.py  test_session_engine_replay.py  (+15 more)
(+9 files in other folders)
